=== release 1.1 ===

2023-06-13 Vincent Torri <vincent.torri@gmail.com>

Changes:

  * some fixes in the installers scripts

Package updates:

  * curl 8.1.2
  * dbus 1.14.8
  * fontconfig 2.14.2
  * fribidi 1.0.13
  * glib2 2.76.3
  * gst-libav 1.22.3
  * gst-plugins-base 1.22.3
  * gst-plugins-good 1.22.3
  * gstreamer 1.22.3
  * harfbuzz 7.3.0
  * icu 73.2
  * libaom 3.6.1
  * libbluray 1.3.4
  * libdav1d 1.2.1
  * libde265 1.0.12
  * libgcrypt 1.10.2
  * libgpg-error 1.47
  * libheif 1.16.2
  * libressl 3.7.2
  * libssh2 1.11.0
  * libwavpack 5.6.0
  * libwebp 1.3.0
  * mpg123 1.31.3
  * mupdf 1.22.1
  * nghttp2 1.54.0
  * opus 1.4
  * orc 0.4.34
  * pixman 0.42.2
  * xz 5.4.2

=== release 1.0 ===

2023-04-08 Vincent Torri <vincent.torri@gmail.com>

  * First release